BPER/DEVF/force-app/main/default/objects/CH_ServiceAppointment__c/CH_ServiceAppointment__c.object-meta.xml
<CustomObject>
    <label>CH - Service Appointment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CH - Service Appointment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CH - Service Appointment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>