BPER/DEVF/force-app/main/default/objects/CH_ServiceAppointment__c/fields/CRM_Account__c.field-meta.xml
<CustomField>
    <fullName>CRM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CH - Service Appointment</relationshipLabel>
    <relationshipName>CH_Service_Appointment</relationshipName>
    <type>Lookup</type>
</CustomField>