BPER/DEVF/force-app/main/default/objects/CH_ServiceAppointment__c/fields/CRM_Autore__c.field-meta.xml
<CustomField>
    <fullName>CRM_Autore__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Autore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>