BPER/DEVF/force-app/main/default/objects/CH_ServiceAppointment__c/fields/CRM_Comments__c.field-meta.xml
<CustomField>
    <fullName>CRM_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>